# Smart-Supply

./: .gitignore  Application_flow.md  Makefile  PRD  SECURITY_NOTICE.md  TRD  docker-compose.yml  merge-duplicates.js
.github/workflows/: ci.yml
backend/: apply_migration_006.py  apply_schema.py  main.py  pyproject.toml
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  inventory.py  procurement.py  tenants.py
backend/app/core/: config.py  database.py  middleware.py
backend/app/services/: auth_service.py  inventory_service.py  procurement_service.py
database/: 002_enterprise_migration.sql  003_rls_and_seed.sql  004_auto_confirm.sql  005_wipe_data.sql  006_pos_and_customers.sql  006_pos_orders_only.sql  ai_views.sql  billing_views.sql  er-diagrams.md  rls_policies_dev.sql  schema.sql
docs/: ai-architecture.md  devops-testing-deployment.md  information-architecture.md  manual-testing-guide.md  marketplace-procurement-workflows.md  mobile-app-specification.md  security-architecture.md
frontend/: .env.example  .env.local  Dockerfile  apply_migration_006.ts  check.js  check_superadmin.js  middleware.ts  next.config.js  package-lock.json  package.json  run_migration.ts  tsconfig.tsbuildinfo  wipe_all_but_superadmin.js
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: app-paths-manifest.json  middleware-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  (+1 more)
frontend/app/: layout.tsx
frontend/lib/: auth-guard.ts  supabase.ts  validation.ts
(+623 files in other folders)
