[project]
name = "smartsupply-backend"
version = "1.0.0"
description = "SmartSupply AI Backend - Multi-tenant B2B SaaS Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "emails>=0.6",
    "jinja2>=3.1.4",
    "pillow>=11.0.0",
    "openpyxl>=3.1.5",
    "reportlab>=4.2.0",
    "boto3>=1.35.0",
    "aiokafka>=0.12.0",
    "elasticsearch[async]>=8.15.0",
    "openai>=1.55.0",
    "supabase>=2.10.0",
    "pgvector>=0.3.0",
    "pyotp>=2.9.0",
    "qrcode>=8.0",
    "barcode>=0.0.1",
    "sentry-sdk[fastapi]>=2.18.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.1",
    "faker>=30.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
ml = [
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "prophet>=1.1.6",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
]
